fix: resize buttons on small screen

--- a/src/assets/results.css
+++ b/src/assets/results.css
@@ -40,7 +40,7 @@
 }
 
 .data-reference {
-  font-size: 12px;
+  font-size: 8px;
 }
 
 @media (min-width:600px) {
@@ -49,9 +49,13 @@
   }
   .icon-title {
     font-size: 20px;
+    margin-top: 2rem;
   }
   .city-weather-data {
     font-size: 0.9rem;
+  }
+  .data-reference {
+    font-size: 12px;
   }
 }
 
